--- a/project.config
+++ b/project.config
@@ -2,3 +2,4 @@
 	inheritFrom = All-Projects
 [access "refs/*"]
 	owner = group ldap/oran-gerrit-aal-lib
+	owner = group ldap/oran-gerrit-aal-lib-committers
